@@ -30,7 +30,7 @@ extern "C" {
 #define MagickLibVersion  0x668
 #define MagickLibVersionText  "6.6.8"
 #define MagickLibVersionNumber  4,0,1
-#define MagickLibAddendum  "-9"
+#define MagickLibAddendum  "-8"
 #define MagickLibInterface  4
 #define MagickLibMinInterface  4
 #define MagickReleaseDate  "2011-03-25"
